Make separate recommendation view

--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -1,19 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
     <a href="/"><button type="button" name="button">Search again</button></a>
       <h2>Morning: </h2>
-      {% if ride.morning %}
-        Morning ride looks good!
-      {% else %}
-        Too windy in the morning.
-      {% endif %}
+        {{ morning.recommendation() }}
 
       <h2>Evening: </h2>
-      {% if ride.evening %}
-        Evening ride looks good!
-      {% else %}
-        Too windy in evening.
-      {% endif %}
+        {{ evening.recommendation() }}
 
 {% endblock %}
