--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/styles.css">
   </head>
   <body>
-    <h1>Bike Day</h1>
-    {% block content%}
-    {% endblock %}
+    <br>
+    <div class="container">
+    <div class="jumbotron text-center">
+        <h1 class="jumbotron-heading">Bike Day</h1>
+
+        <div class="row">
+        </div>
+        {% block content%}
+        {% endblock %}
+      </div>
+    </div>
   </body>
 </html>
